--- a/public/client/package.json
+++ b/public/client/package.json
@@ -29,13 +29,19 @@
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
     "react-twitter-embed": "^4.0.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongodb": "^4.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm i",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-dev": "nodemon index.js"
+    
   },
   "eslintConfig": {
     "extends": [
@@ -54,5 +60,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  
+  "description": "",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
