--- a/public/server/package.json
+++ b/public/server/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm i"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongodb": "^4.8.1",
-    "stripe": "^13.6.0",
-    "uuid": "^9.0.1"
+    "mongodb": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
